--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                         <ul class="primary-nav">
                             <li><a href="#intro">How we met</a></li>
                             <li><a href="#events">Events</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
@@ -83,8 +82,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
+                <h3>We are getting married</h3>
+                <p>The date is 6<sup>th</sup> of August '22 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
             </div>
@@ -103,12 +102,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/DSD_0214.jpg to be jacob
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -124,45 +118,41 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Highlights</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>27th November</strong></p>
+                   
 
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
-                    <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
-                        attend the event together and a professional mehndi artist applies
-                        mehndi to the bride's hands and feet. This will be having a celebratory
-                        festival feel to it with people wearing vibrant clothes and dancing, singing, playing
-                        games and a lot more.</p>
+                    <h5>Ceremony<span class="time">4:30PM - 5:30PM</span></h5>
+                    <p>We will be having a traditional christian wedding ceremony, officiated by Tanner Lowe,
+                        the pastor that helped lead Cece to becoming a more well rounded and effective pastor. 
+                    </p>
                 </div>
                 <div class="wp5">
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
-                        knot". With booze flowing down the floor and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
-                        pong matches & karaoke for sure.</p>
+                    <h5>Cocktail Hour <span class="time">6:00PM -7:00PM</span></h5>
+                    <p>FILL TEXT</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
+                <div class="col-md-12">
+                    <h3 class="header">Concerns</h3>
+                </div>
                 <div class="wp4">
-                    <p><strong>28th November</strong></p>
 
-                    <h5>Haldi <span class="time">10AM-11AM</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <h5>Heat <span class="time"></span></h5>
+                    <p>It is going to be an outdoor ceremony and reception, in august, nowhere near a body of water. 
+                        It is likely going to be 90&deg;F outside during the ceremony, slightly cooler during the reception.
+                        Dress accordingly.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the
-                        knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
-                        as maximum number of guests would be attending this event. This is when the couple circle the
-                        sacred fire and are finally declared husband and wife.</p>
+                    <h5>Parking/Driving. <span class="time">6PM-12AM</span></h5>
+                    <p>The venue is in a back country area, and driving to the actual location can be difficult. 
+                        Carpooling is <b>strongly</b> encouraged, and will be better for everyone involved.
+                        As you get closer to the venue, the roads will get rougher, windier, and worse lit, so don't be too lit yourself.
+                    </p>
                 </div>
             </div>
         </div>
@@ -225,23 +215,6 @@
 
 </section>
 
-<section id="instagram" class="section-padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3>A picture is worth a thousand words!</h3>
-                <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
-                </p>
-            </div>
-        </div>
-        <div class="row section-border wp7">
-            <div class="col-md-4 col-md-offset-4">
-                <img src="img/iphone_instagram.jpg">
-            </div>
-        </div>
-    </div>
-</section>
 
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
