first production version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Cece and Jacobs Wedding Website</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#8fa0c7">
     <meta property="og:title" content="Ram & Antara getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:type" content="website">
@@ -49,7 +49,7 @@
                             <li><a href="#intro">How we met</a></li>
                             <li><a href="#events">Events</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Venue </a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -78,7 +78,7 @@
     <div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>
 </section>
 
-<section id="invitation" class="section-padding">
+<section id="invitation" class="section-padding" >
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -102,7 +102,9 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/DSD_0214.jpg to be jacob
+                    Cece and Jacob’s love story begins sometime back in high school. While neither of them remember when they met, they became good acquaintance friends while attending Trinity’s high school ministry together. At some point, each remembers telling maid of honor Elizabeth that they thought the other was cute, though both dismissed it as a simple crush and went about their lives. 
+                    <br>Fast forward to summer 2018, where Cece and Jacob spent all summer doing children’s ministry together and hanging out at college ministry. Thus begins their love story. After weeks of running kids’ camps together, they both wanted to make a move. After bridesmaid Vanessa threw a lovely Christmas in July party, Jacob and Cece decided to drive down to Newport Beach to hang out and watch the sunset, and the rest is history! They’ve hiked peaks in Zion National Park, spent summers at the beach together, hosted many dinner parties with friends, and become best friends through their years together. They’re looking forward to the adventure of marriage and are so excited that you are helping them start it off with a party!
+                    and edit img/img_2317.jpg to be cec, and img/DSD_0214.jpg to be jacob
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -118,7 +120,7 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Highlights</h3>
+                <h3 class="header">Events</h3>
             </div>
         </div>
         <div class="row">
@@ -225,62 +227,62 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
         </div>
         <div class="row">
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2942-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_0074.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2942-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_0074.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/IMG_3483-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_0483.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/IMG_3483-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_0483.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX2992-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_0567.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX2992-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_0567.JPG" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/_RFX3064-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_0549.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RFX3064-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_0549.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4089-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_0602.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4089-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_0602.jpg" alt=""/>
                     </div>
                 </a>
             </div>
             <div class="col-md-2">
-                <a class="fancybox" rel="group" href="img/eng_pics/NGP_4119-lg.jpg">
+                <a class="fancybox" rel="group" href="img/eng_pics/IMG_7445.JPG">
                     <div class="img-wrap">
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/NGP_4119-sm.jpg" alt=""/>
+                        <img src="img/eng_pics/IMG_7445.JPG" alt=""/>
                     </div>
                 </a>
             </div>
@@ -303,11 +305,11 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
 
 <section id="video-bg" class="hidden-sm hidden-xs">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+         data-property="{videoURL:'https://www.youtube.com/watch?v=a38cfewB98Q',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:381, stopAt:445, opacity:1, loop:true}">
     </div>
     <div id="video-content">
-        <h5>Kolkata</h5>
-        <p>City of joy</p>
+        <h5>Outreach Farm Project</h5>
+        <p>Fallbrook CA</p>
     </div>
 </section>
 
@@ -323,25 +325,23 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
                 <div class="text-center">
                     <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
                         <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3182820816446!2d-117.15159218480218!3d33.38885958079162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db80ca056e6811%3A0x29210e8db296ea36!2sOutreach%20Farm%20Project!5e0!3m2!1sen!2sus!4v1655250532781!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>ITC Fortune Park</h5>
-                            <p>Kona Expressway, Howrah, West Bengal 711403, India</p>
+                            <h5>Outreach Farm Project</h5>
+                            <p>974 Rice Canyon Road, Fallbrook CA 92028</p>
                         </div>
                         <div class="col-md-6">
-                            <h5>Mr. Amit Roy</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+919412345678">+91 9412345678</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+917123456789">+91 7123456789</a></p>
+                            <h5>Jacob and Cece's phone numbers</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+17143947378">+1 714 394-7378</a><br>
+                                <i class="fa fa-mobile"></i> <a href="tel://+17146141713">+1 714 614-1713</a></p>
                         </div>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
@@ -377,51 +377,7 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
                 <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
-                <form id="rsvp-form" class="rsvp-form"
-                      action=""
-                      method="POST">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
-                                                                     required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name"
-                                                                 required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
-                                                                  max="4"
-                                                                  placeholder="Husband/Wife or kids"
-                                                                  required>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                            <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
-                                                                class="" min="0"
-                                                                placeholder="Invite code"
-                                                                required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12" id="alert-wrapper"></div>
-                    </div>
-                    <button class="btn-fill rsvp-btn">
-                        Yes,
-                        that's me!
-                    </button>
-                </form>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGhWfDuqnglKEkfE0Sciqarul8Kay_YKvLbOBjUTVvofiLTw/viewform?embedded=true" width="640" height="830" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
     </div>
@@ -432,7 +388,7 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Crafted by Jacob, mostly by hand, with lots of <span class="fa fa-heart pulse2"></span> for Cece</p>
             </div>
         </div>
     </div>
@@ -448,7 +404,7 @@ Have CECE write a cute thing here, and edit img/img_2317.jpg to be cec, and img/
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
+        src="httphttps://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMaps://maps.googleapis.com/maps/api/js?key=AIzaSyBlPw3GQYI3faa_9mRE6plWuM7xNEmrwH0&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
