removed wrong images

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs">
+                <!--<img src="img/IMG_2317.jpg" class="wp1">-->
+            </div>
             <div class="col-md-6">
                 <p>
                     Cece and Jacob’s love story begins sometime back in high school. While neither of them remember when they met, they became good acquaintance friends while attending Trinity’s high school ministry together. At some point, each remembers telling maid of honor Elizabeth that they thought the other was cute, though both dismissed it as a simple crush and went about their lives. 
@@ -107,7 +109,9 @@
                     and edit img/img_2317.jpg to be cec, and img/DSD_0214.jpg to be jacob
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs">
+                <!--<img src="img/DSD_0214.jpg" class="wp2">-->
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
