please work this time

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs">
-                <!--<img src="img/IMG_2317.jpg" class="wp1">-->
+                <img src="img/eng_pics/babycec.png" class="wp1">
             </div>
             <div class="col-md-6">
                 <p>
@@ -109,7 +109,7 @@
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs">
-                <!--<img src="img/DSD_0214.jpg" class="wp2">-->
+                <img src="img/eng_pics/babyjake.png" class="wp2">
             </div>
         </div>
         <div class="row">
