--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>We are getting married!</h3>
-                <p>Our wedding date is 6<sup>th</sup> of August '22 and we would love for you to join the celebration!</p>
+                <p>Our wedding date is August 6th, 2022 and we would love for you to join the celebration!</p>
                 <div class="share-bar"></div>
             </div>
         </div>
@@ -94,7 +94,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">How We Met</h3>
             </div>
         </div>
         <div class="row">
@@ -141,7 +141,7 @@
                     </p>
                 </div>
                 <div class="wp7">
-                    <h5>Reception <span class="time">7:00PM -idk, whenever</span></h5>
+                    <h5>Reception <span class="time">7:00PM - 10:00PM</span></h5>
                     <p>The reception will include dinner, speeches, and a dance party to celebrate the newlyweds, followed by a send off into their future endeavors.
                     </p>
                 </div>
@@ -157,9 +157,9 @@
                         Wear sunscreen, bring a light jacket for the evening, and remember to drink lots of water!</p>
                 </div>
                 <div class="wp6">
-                    <h5>Parking/Driving. <span class="time">6PM-12AM</span></h5>
+                    <h5>Parking/Driving <span class="time">Arrive to park at 4:00PM</span></h5>
                     <p>The venue is in a back country area, and driving to the actual location can be difficult. 
-                        Carpooling is <b>strongly</b> encouraged. Drive slow and safe!
+                        Carpooling is <b>strongly</b> encouraged. Drive slow and safe! As you near the location, you will see signs pointing to the parking area. From there, a shuttle will take you up the final hill to the location.
                         
                     </p>
                 </div>
