--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                     </p>
                 </div>
                 <div class="wp5">
-                    <h5>Cocktail Hour <span class="time">6:00PM -7:00PM</span></h5>
+                    <h5>Cocktail Hour <span class="time">5:45PM - 6:45PM</span></h5>
                     <p>Between the ceremony and the reception, there will be a brief cocktail hour with light refreshments.
                     </p>
                 </div>
                 <div class="wp7">
-                    <h5>Reception <span class="time">7:00PM - 10:00PM</span></h5>
+                    <h5>Reception <span class="time">6:45PM - 10:00PM</span></h5>
                     <p>The reception will include dinner, speeches, and a dance party to celebrate the newlyweds, followed by a send off into their future endeavors.
                     </p>
                 </div>
@@ -158,8 +158,8 @@
                 </div>
                 <div class="wp6">
                     <h5>Parking/Driving <span class="time">Arrive to park at 4:00PM</span></h5>
-                    <p>The venue is in a back country area, and driving to the actual location can be difficult. 
-                        Carpooling is <b>strongly</b> encouraged. Drive slow and safe! As you near the location, you will see signs pointing to the parking area. From there, a shuttle will take you up the final hill to the location.
+                    <p>The venue is in a back country area, and driving to the actual location can be difficult. Because of the very limited parking,
+                        carpooling is <b>strongly</b> encouraged. Drive slow and safe! As you near the location, you will see signs pointing to the parking area. From there, a shuttle will take you up the final hill to the location.
                         
                     </p>
                 </div>
@@ -186,7 +186,7 @@
                     </button>
                     <h3 class="text-center section-padding">Dress Code</h3>
                     <p>
-                        <strong>The wedding is an August wildflower garden party, so the dress code is semi-formal/festive. Remember to consider the heat, and wear what makes you feel comfortable and confident.<br>
+                        <strong>The wedding is an August wildflower garden party, so the dress code is semi-formal/festive. The majority of the evening will be spent on grass, so we advise against stilletto heels in favor of a block heel, wedge, or sandal/flat. Remember to consider the heat, and wear what makes you feel comfortable and confident.<br>
                             
                         </strong>
                         <br>
@@ -370,7 +370,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Jacob, mostly by hand, with lots of <span class="fa fa-heart pulse2"></span> for Cece</p>
+                <p>Crafted by Jacob, mostly by hand, with lots of love for Cece</p>
             </div>
         </div>
     </div>
