--- a/index.html
+++ b/index.html
@@ -306,15 +306,16 @@
             <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
                 <div class="text-center">
                     <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
-                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3182820816446!2d-117.15159218480218!3d33.38885958079162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db80ca056e6811%3A0x29210e8db296ea36!2sOutreach%20Farm%20Project!5e0!3m2!1sen!2sus!4v1655250532781!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info                        
                     </div>
+
                 </div>
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
                             <h5>Outreach Farm Project</h5>
                             <p>974 Rice Canyon Road, Fallbrook CA 92028</p>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3182820816446!2d-117.15159218480218!3d33.38885958079162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db80ca056e6811%3A0x29210e8db296ea36!2sOutreach%20Farm%20Project!5e0!3m2!1sen!2sus!4v1655250532781!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <div class="col-md-6">
                             <h5>Jacob and Cece's Phone Numbers</h5>
@@ -335,7 +336,20 @@
         </div>
     </div>
 </section>
-
+<section class="hotels text-center" id="hotels">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>Avaliable Hotels</h2>
+                <p>
+                <div>Mariott suites</div> 
+                <div>Harrahs</div> 
+                <div>Hilton</div>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="rsvp text-center" id="rsvp">
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
