changed dress code for heels

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     </button>
                     <h3 class="text-center section-padding">Dress Code</h3>
                     <p>
-                        <strong>The wedding is an August wildflower garden party, so the dress code is semi-formal/festive. The majority of the evening will be spent on grass, so we advise against stilletto heels in favor of a block heel, wedge, or sandal/flat. Remember to consider the heat, and wear what makes you feel comfortable and confident.<br>
+                        <strong>The wedding is an August wildflower garden party, so the dress code is semi-formal/festive. The majority of the evening will be spent on grass, so we advise against stilletto heels in favor of a block heel, wedge, or sandal/flat. Think pretty floral dresses, summery fabrics that won't make you too warm, nice pants and button downs for the lads, etc.Remember to consider the heat, and wear what makes you feel comfortable and confident.<br>
                             
                         </strong>
                         <br>
@@ -315,7 +315,7 @@
                         <div class="col-md-6">
                             <h5>Outreach Farm Project</h5>
                             <p>974 Rice Canyon Road, Fallbrook CA 92028</p>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3182820816446!2d-117.15159218480218!3d33.38885958079162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db80ca056e6811%3A0x29210e8db296ea36!2sOutreach%20Farm%20Project!5e0!3m2!1sen!2sus!4v1655250532781!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.3182820816446!2d-117.15159218480218!3d33.38885958079162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db80ca056e6811%3A0x29210e8db296ea36!2sOutreach%20Farm%20Project!5e0!3m2!1sen!2sus!4v1655250532781!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" &maptype=satellite></iframe>
                         </div>
                         <div class="col-md-6">
                             <h5>Jacob and Cece's Phone Numbers</h5>
