next time stay at the tiptom

--- a/index.html
+++ b/index.html
@@ -340,11 +340,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>Avaliable Hotels</h2>
+                <h1>Avaliable Hotels</h1>
                 <p>
-                <div>Mariott suites</div> 
-                <div>Harrahs</div> 
-                <div>Hilton</div>
+                <div>
+                    <h2><a href="https://www.marriott.com/en-us/hotels/ontst-springhill-suites-temecula-valley-wine-country/overview/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2&y_source=1_MjgxODQzNS03MTUtbG9jYXRpb24ud2Vic2l0ZQ%3D%3D">
+                        Mariott suites</a></h2><br>
+                </div> 
+                <div><h2><a href="https://www.caesars.com/harrahs-socal/hotel?utm_campaign=GMB&utm_source=google&utm_medium=local&utm_term=Harrah%27sResortSouthernCalifornia&utm_content=Hotel">
+                    Harrahs</a></h2></div> 
+                <div><h2><a href="https://www.hilton.com/en/hotels/cldtmgi-hilton-garden-inn-temecula/?SEO_id=GMB-AMER-GI-CLDTMGI&y_source=1_Mjc3Mjk2ODctNzE1LWxvY2F0aW9uLndlYnNpdGU%3D">
+                    Hilton</a></h2></div>
                 </p>
             </div>
         </div>
