added registry, changed bio slightly

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <p>
                     Cece and Jacob’s love story begins sometime back in high school. While neither of them remember when they met, they became good acquaintance friends while attending Trinity’s high school ministry together. At some point, each remembers telling maid of honor Elizabeth that they thought the other was cute, though both dismissed it as a simple crush and went about their lives. 
                     <br>Fast forward to summer 2018, where Cece and Jacob spent all summer doing children’s ministry together and hanging out at college ministry. Thus begins their love story. After weeks of running kids’ camps together, they both wanted to make a move. After bridesmaid Vanessa threw a lovely Christmas in July party, Jacob and Cece decided to drive down to Newport Beach to hang out and watch the sunset, and the rest is history! They’ve hiked peaks in Zion National Park, spent summers at the beach together, hosted many dinner parties with friends, and become best friends through their years together. They’re looking forward to the adventure of marriage and are so excited that you are helping them start it off with a party!
+                    <br>   After the wedding, Cece and Jacob will be moving across the country to Princeton, New Jersey as Cece begins her masters program at Princeon Theological Seminary. Prayers are appreciated for a smooth transition!
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs">
@@ -283,6 +284,13 @@
             </div>
         </div>
     </div>-->
+</section>
+
+<section id="registry" class="section-padding">
+    <h1 class="text-center"> <a href="https://www.target.com/gift-registry/gift/ceceandjacob">Registry</a></h1>
+    <p class="text-center"> We registered at Target, click the word Registry to view! <br>
+        Cash gifts are also greatly appreciated, as we will be moving about a two weeks after the wedding into our first (unfurnished) appartment all the way in Princeton, New Jersey! This means we have a limited ability to shift large gifts, as we are planning on flying.
+    </p>
 </section>
 
 <section id="video-bg" class="hidden-sm hidden-xs">
