--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#8fa0c7">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Cece and Jacobs Wedding Website!">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/RealImg/2.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/RealImg/2.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/RealImg/2.png">
     <link rel="manifest" href="manifest.json">
@@ -68,7 +68,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
                     <!--<h1>Cece and Jacob</h1>-->
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
+                    
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -162,6 +162,11 @@
                     <p>The venue is in a back country area, and driving to the actual location can be difficult. Because of the very limited parking,
                         carpooling is <b>strongly</b> encouraged. Drive slow and safe! As you near the location, you will see signs pointing to the parking area. From there, a shuttle will take you up the final hill to the location.
                         
+                    </p>
+                </div>
+                <div class="wp7">
+                    <h5>Health and Safety<span class="time"></span></h5>
+                    <p>While the wedding is outdoors with plenty of ventilation, we appreciate your extra efforts to maintain a safe environment for all guests, especially those who are immunocompromised. The groom himself is in this camp as many of you know, so we kindly ask that if you or someone in your party feel under the weather, are exposed to Covid-19, or test positive for Covid-19 that you stay home and rest up. 
                     </p>
                 </div>
             </div>
